Retrieve yang-resources for one or more modules
Issue-ID: CPS-484
