# docs/openapi/components.yml
@@ -11,6 +11,32 @@ components:
         details:
           type: string
 
+    ModuleSources:
+      type: object
+      properties:
+        operation:
+          type: string
+          example: onap-dmi-plugin
+        data:
+          type: object
+          properties:
+            modules:
+              type: array
+              items:
+                type: object
+                properties:
+                  namespace:
+                    type: string
+                  name:
+                    type: string
+                  revision:
+                    type: string
+        cmHandleProperties:
+          type: object
+          additionalProperties:
+            type: string
+            example: system-001
+
   responses:
     NotFound:
       description: The specified resource was not found
@@ -57,3 +83,12 @@ components:
     NoContent:
       description: No Content
       content: {}
+
+  parameters:
+    cmHandleInPath:
+      name: cmHandle
+      in: path
+      description: The identifier for a network function, network element, subnetwork, or any other cm object by managed Network CM Proxy
+      required: true
+      schema:
+        type: string
