# src/main/java/org/onap/cps/ncmp/dmi/rest/controller/DmiRestController.java
@@ -20,14 +20,17 @@
 
 package org.onap.cps.ncmp.dmi.rest.controller;
 
+import com.fasterxml.jackson.databind.ObjectMapper;
+import javax.validation.Valid;
+import org.onap.cps.ncmp.dmi.model.ModuleSources;
 import org.onap.cps.ncmp.dmi.rest.api.DmiPluginApi;
 import org.onap.cps.ncmp.dmi.service.DmiService;
+import org.onap.cps.ncmp.dmi.service.models.Modules;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RestController;
-
 
 @RequestMapping("${rest.api.dmi-base-path}")
 @RestController
@@ -35,9 +38,12 @@ public class DmiRestController implements DmiPluginApi {
 
     private DmiService dmiService;
 
+    private ObjectMapper objectMapper;
+
     @Autowired
-    public DmiRestController(final DmiService dmiService) {
+    public DmiRestController(final DmiService dmiService, final ObjectMapper objectMapper) {
         this.dmiService = dmiService;
+        this.objectMapper = objectMapper;
     }
 
     @Override
@@ -45,5 +51,20 @@ public class DmiRestController implements DmiPluginApi {
 
         final String modulesListAsJson = dmiService.getModulesForCmHandle(cmHandle);
         return new ResponseEntity<>(modulesListAsJson, HttpStatus.OK);
+    }
+
+    @Override
+    public ResponseEntity<Object> retrieveModuleResources(@Valid final ModuleSources moduleSources,
+        final String cmHandle) {
+        final var modulesData = convertRestObjectToJavaApiObject(moduleSources);
+        final var response = dmiService.getModuleSources(cmHandle, modulesData.getModules());
+        if (!response.isEmpty()) {
+            return new ResponseEntity<>(response, HttpStatus.OK);
+        }
+        return new ResponseEntity<>(response, HttpStatus.NOT_FOUND);
+    }
+
+    private Modules convertRestObjectToJavaApiObject(final ModuleSources moduleSources) {
+        return objectMapper.convertValue(moduleSources.getData(), Modules.class);
     }
 }
